--- a/index.html
+++ b/index.html
@@ -1,97 +1,62 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-
+<html lang ="en" dir ="ltr">
 <head>
-  <meta charset="utf-8">
-  <meta name="description" content="hi" />
-  <title>☻Naik's personal site☻</title>
+<meta charset="utf-8" />
+
+<title>Naik's personal website</title>
+
+<link rel="stylesheet" href="css/styles.css">
+<link rel="icon" href="favicon.ico">
+<link href="https://fonts.googleapis.com/css?family=Hepta+Slab|Merriweather|Roboto&display=swap" rel="stylesheet">
 </head>
-
 <body>
-  <table cellspacing="40">
-    <tr>
-      <td><img src="https://tse1.mm.bing.net/th?id=OIP.2sYd3NAFJTn-LJlf0aqXkgHaFj&pid=Api&P=0&w=226&h=170"></td>
-      <td>
-        <h1>Rohan Naik</h1>
-        <p><em>my name is <strong><a href="https://unicode-table.com/en/sets/emoji/"> Rohan Naik</a> </strong></em></p>
-      </td>
-    </tr>
-  </table>
 
-  <br>
+  <div class="top">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud">
 
-  <p>I study at NIIT University. </p>
-  <p>I am pursuing M.Sc in CSE</p>
-  <hr>
+    <h1>I'm Rohan Naik</h1>
+    <p class="line">web <span class="develop">develop</span>er</p>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
+    <img class="mountain" src="images/mountain.png" alt="">
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img class="birds" src="images\birds.jpg" alt="Rohan Naik">
+      <h2>Hello.</h2>
+      <p class="intro">My name is Naik and i am here to guide you.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="web" src="images/web.svg" alt="">
+        <h3>Web Development</h3>
+        <p>I know how to make websites</p>
+      </div>
 
-  <h3>Books and teacings</h3>
-  <ul style="list-style-type:disc;">
-    <li>coffe</li>
-    <li>tea</li>
-    <li>milk</li>
-  </ul>
-  <hr>
+      <div class="skill-row">
 
-  <h3>Work Experience </h3>
+        <img class="html" src="images/html.png" alt="html">
+        <h3 >Java</h3>
+        <p>Know a thing or two about java</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
 
-  <table border="1">
-    <thead>
-      <tr>
-        <th>dates</th>
-        <th>Work</th>
-      </tr>
-    </thead>
+      <p class="contact-message">If you love making websites as much as i do. Let's talk about how awesome they are</p>
+      <a class="butn" href="mailto:rohanaik1997@email.com">CONTACT ME</a>
+    </div>
+  </div>
 
-    <tbody>
-
-
-      <tr>
-        <td>2017-2021</td>
-        <td>student at niit university</td>
-      </tr>
-      <tr>
-        <td>2010</td>
-        <td>Naik</td>
-      </tr>
-
-
-    </tbody>
-  </table>
-
-  <h3>hobbies and skills</h3>
-  
-      <a href="hobbies.html">My Hobbies</a>
-      <a href="contact_me.html"> Contact me</a>
-
-
-  <h3>Skills</h3>
-
-  <table border="1" cellspacing "20">
-    <tr>
-
-
-
-
-
-      <td>java</td>
-      <td>★★</td>
-      <td>python</td>
-      <td>★</td>
-
-    </tr>
-
-
-    <tr>
-      <td>
-        Mobile App
-      </td>
-      <td>★</td>
-      <td>timepass</td>
-      <td>★★★★★</td>
-    </tr>
-
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <h5 class="copyright">© 2018 Rohan Naik.</h5>
+  </div>
 
 
 </body>
-
 </html>
